# recon

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
confs/stereo1/: cam2.cam
reconstruct/: Makefile  README.md
reconstruct/confs/stereo1/: cam1.cam
reconstruct/src/: main.c
reconstruct/src/conf/: paramload.c
reconstruct/src/recon/: camera.h  stereo.c  stereo.h
search/: README.md  main.py  match.py  search.py
src/: main.cpp
src/conf/: paramload.h  paramload.hpp
src/math/: vec.c  vec.h  vec.hpp
src/recon/: camera.c  camera.hpp  stereo.hpp
